# singularity-language-registry

./: .envrc  .envrc.local.example  .gitignore  AGENTS.md  AUTO_MERGE_FLOW.md  BUILD.bazel  CARGO_TOOLS.md  CHANGELOG.md  CI_OPTIMIZATION.md  CLAUDE_AUTO_APPROVE_SETUP.md  CLAUDE_INTEGRATION.md  COMPLETE_SUMMARY.md  CONTRIBUTING.md  CRATE_PACKAGING.md  Cargo.toml  DOCS_SETUP.md  ENGINE_INTEGRATION_COMPLETE.md  FLAKEHUB_SETUP.md  GITHUB_RELEASE_STRUCTURE.md  GITHUB_SETUP_COMPLETE.md  INSTALLATION.md  LICENSE  LINGUIST_INTEGRATION.md  PRIVATE_CRATES.md  README.md  REFACTORING_SUMMARY.md  RELEASE_PROCESS.md  RELEASE_REPORTS_SUMMARY.md  RENOVATE.md  SNAPSHOT.md  TEST_AUTO_APPROVE.md  WORKFLOW_GUIDE.md  build.rs  clippy.toml  deny.toml  flake.nix  justfile  renovate.json5  rustfmt.toml  setup-hooks.sh
.cargo/: config.toml
.githooks/: pre-commit  pre-push
.github/: enterprise-config.md
.github/workflows/: auto-approve.yml  auto-pr.yml  auto-release.yml  bot-review-gate.yml  ci.yml  claude-review.yml  claude.yml  docs.yml  publish-docs.yml  publish-snapshot.yml  release.yml  renovate.yml  sync-linguist.yml  validate-snapshot.yml
canonical/: snapshot.json
examples/: usage.rs
scripts/: sync_linguist_patterns.py
src/: detection.rs  file_classifier.rs  file_classifier_generated.rs  heuristics_generated.rs  languages_metadata_generated.rs  lib.rs  metadata.rs  registry.rs  utils.rs
tests/fixtures/: builtin_snapshot.json
tools/: BUILD.bazel  README.md  linguist_sync.rs  run_generate_snapshot.sh
tools/generate_snapshot_job/: BUILD.bazel  Cargo.toml
tools/generate_snapshot_job/src/: main.rs
tools/linguist_to_snapshot/: BUILD.bazel  Cargo.toml
tools/linguist_to_snapshot/src/: main.rs
