[package]
name = "generate_snapshot_job"
version = "0.1.0"
edition = "2021"
description = "Wrapper CLI used in CI to generate the canonical snapshot by invoking the linguist_to_snapshot converter."
license = "MIT OR Apache-2.0"
repository = "https://github.com/Singularity-ng/singularity-language-registry"
readme = "../../README.md"
keywords = ["snapshot", "ci", "linguist"]
categories = ["command-line-utilities", "development-tools"]

[dependencies]
anyhow = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
tempfile = "3.5"
clap = { version = "4.2", features = ["derive"] }
