load("@rules_rust//rust:defs.bzl", "rust_binary")
load("@crate_index//:defs.bzl", "aliases", "all_crate_deps")

package(default_visibility = ["//visibility:public"])

rust_binary(
    name = "linguist_to_snapshot",
    srcs = glob(["src/**/*.rs"]),
    aliases = aliases(),
    deps = all_crate_deps() + [
        "//crates/vendor/singularity-language-registry",
    ],
    proc_macro_deps = all_crate_deps(proc_macro = True),
)
